public/lite/api/en/r1.6/_sources/generate/file_include_core_ops_arg_max.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_ops_arg_max.h:

File arg_max.h
==============

|exhale_lsh| :ref:`Parent directory <dir_include_core_ops>` (``include/core/ops``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/ops/arg_max.h``)
-------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_ops_arg_max.h.rst





Includes
--------


- ``abstract/abstract_value.h`` (:ref:`file_include_core_abstract_abstract_value.h`)

- ``memory``

- ``ops/op_utils.h`` (:ref:`file_include_core_ops_op_utils.h`)

- ``ops/primitive_c.h`` (:ref:`file_include_core_ops_primitive_c.h`)

- ``string``

- ``utils/check_convert_utils.h`` (:ref:`file_include_core_utils_check_convert_utils.h`)

- ``vector``



Included By
-----------


- :ref:`file_include_core_ops_fusion_arg_max_fusion.h`




Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__ops`


Classes
-------


- :ref:`exhale_class_classmindspore_ops_ArgMax`


Functions
---------


- :ref:`exhale_function_mindspore_ops_ArgMaxInfer-1`


Variables
---------


- :ref:`exhale_variable_mindspore_ops_kNameArgMax-1`

