public/lite/api/en/r1.7/_sources/generate/file_include_core_ops_arg_max.h.rst.txt
:gitee_url: https://gitee.com/mindspore/docs


.. _file_include_core_ops_arg_max.h:

File arg_max.h
==============

|exhale_lsh| :ref:`Parent directory <dir_include_core_ops>` (``include/core/ops``)

.. |exhale_lsh| unicode:: U+021B0 .. UPWARDS ARROW WITH TIP LEFTWARDS
Definition (``include/core/ops/arg_max.h``)
-------------------------------------------


.. toctree::
   :maxdepth: 1

   program_listing_file_include_core_ops_arg_max.h.rst





Includes
--------


- ``memory``

- ``mindapi/base/type_id.h``

- ``mindapi/base/types.h``

- ``ops/base_operator.h`` (:ref:`file_include_core_ops_base_operator.h`)

- ``string``

- ``vector``



Included By
-----------


- :ref:`file_include_core_ops_fusion_arg_max_fusion.h`




Namespaces
----------


- :ref:`namespace_mindspore`

- :ref:`namespace_mindspore__ops`


Classes
-------


- :ref:`exhale_class_classmindspore_ops_ArgMax`


Functions
---------


- :ref:`exhale_function_mindspore_ops_ArgMaxInfer-1`


Variables
---------


- :ref:`exhale_variable_mindspore_ops_kNameArgMax-1`

